--- a/catalog.html
+++ b/catalog.html
@@ -6,48 +6,76 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <style>
+
+    h2 {
+      font-size: 300%;
+    }
+
     body {
-  background: lightblue url("imgs/brickwall.jpg") no-repeat fixed center;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+     background: rgb(255, 255, 255) url("imgs/brickwall.jpg") no-repeat fixed center;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+    }
+
+    .w3-container {
+      color: white;
     }
 </style>
 </head>
 
-<body> 
-    <div class="navbar">
-    <div class="w3-top">
-    <div class="w3-bar w3-deep-orange w3-card-2">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large"> <i class="fa fa-bars"></i> </a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="catalog.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CATALOG</a>
-    <a href="#sketches" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SKETCHES</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">NEW <i class="fa fa-caret-down"></i></button>
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="videos.html" class="w3-bar-item w3-button">VISUALS</a>
-        <a href="products.html" class="w3-bar-item w3-button">PRODUCTS</a>
+<body>
+  <div class="w3-top">
+    <div class="w3-bar w3-deep-orange w3-card">
+      <div class="w3-dropdown-hover w3-hide-large w3-hide-medium">
+        <button class="w3-padding-large w3-button" title="bars"><i class="fa fa-bars"></i></button>
+        <div class="w3-dropdown-content w3-bar-block">
+          <a href="catalog.html" class="w3-bar-item w3-button w3-padding-large">CATALOG</a>
+          <a href="sketches.html" class="w3-bar-item w3-button w3-padding-large">SKETCHES</a>
+          <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+          <a href="videos.html" class="w3-bar-item w3-button w3-padding-large">VIDEOS</a>
+          <a href="products.html" class="w3-bar-item w3-button w3-padding-large">PRODUCTS</a>
+        </div>
+      </div>
+
+
+        <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+        <a href="catalog.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CATALOG</a>
+        <a href="sketches.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SKETCHES</a>
+        <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        <div class="w3-dropdown-hover w3-hide-small">
+           <button class="w3-padding-large w3-button" title="More">NEW <i class="fa fa-caret-down"></i></button>
+           <div class="w3-dropdown-content w3-bar-block w3-card">
+              <a href="videos.html" class="w3-bar-item w3-button">VIDEOS</a>
+              <a href="products.html" class="w3-bar-item w3-button">PRODUCTS</a>
+            </div>
+        </div>
     </div>
-    </div>
-    </div>
-    </div>
+    </div>  
+
+    <div>
+      <div class="w3-container w3-content w3-center w3-padding-64" id="catalog">
+        <h2 class="w3-wide w3-text-white"> A CLOSER LOOK AT OUR GOODS </h2>
+    
+      <div class="w3-row w3-padding-64">
+          <div class="w3-col w3-container m6 l6">
+            <p>BRIXKAPS is a brand inspired by streetwear and skateboarding. Our products range from hats, to hoodies, to stickers, and even to fingerboards. Below is a collection of our best products. </p>
+          </div>
+          <div class="w3-col w3-container m6 l6">  
+            <p>You'll see classic distressed caps, beanies, various stickers, brick patterned fingerboards, and our new, hand sewn, brick fabric zip-up hoodies. All designed by Jackson Pollaro & Artche. </p>
+          </div>
+      </div>
+
+         <img class="image" src="imgs/catalog.jpg" alt="catalog" style="width: 90%;">
+      </div>
     </div>
 
- <div>
-    <div class="w3-container w3-content w3-center w3-padding-64" id="catalog">
-    <h2 class="w3-wide w3-text-white">A CLOSER LOOK AT OUR GOODS </h2>
-    <img class="image" src="imgs/catalog.jpg" alt="catalog" style="width: 90%;">
-  </div>
- </div>
-</body>
-
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<footer class="w3-container w3-padding-64 w3-center w3-xlarge">
     <a href="https://www.youtube.com/@brixkaps"><i class="fa fa-youtube"></i></a>
     <a href="https://www.instagram.com/brixkaps/"><i class="fa fa-instagram"></i></a>
     <p class="w3-medium">Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
+
 </body>
 </html>
 
