--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+ <style>
+
+    h2 {
+      font-size: 400%;
+    }
+
+  body {
+    background: rgb(255, 255, 255) url("imgs/brickwall.jpg") no-repeat fixed center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+      }
+
+    .w3-container{
+      color: white;
+    }
+</style>
 </head>
 
 <body>
@@ -14,8 +31,8 @@
           <button class="w3-padding-large w3-button" title="bars"><i class="fa fa-bars"></i></button>
           <div class="w3-dropdown-content w3-bar-block">
             <a href="catalog.html" class="w3-bar-item w3-button w3-padding-large">CATALOG</a>
-            <a href="#sketches" class="w3-bar-item w3-button w3-padding-large">SKETCHES</a>
-            <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+            <a href="sketches.html" class="w3-bar-item w3-button w3-padding-large">SKETCHES</a>
+            <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
             <a href="videos.html" class="w3-bar-item w3-button w3-padding-large">VIDEOS</a>
             <a href="products.html" class="w3-bar-item w3-button w3-padding-large">PRODUCTS</a>
           </div>
@@ -24,12 +41,12 @@
 
           <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
           <a href="catalog.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CATALOG</a>
-          <a href="#sketches" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SKETCHES</a>
-          <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+          <a href="sketches.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SKETCHES</a>
+          <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
           <div class="w3-dropdown-hover w3-hide-small">
              <button class="w3-padding-large w3-button" title="More">NEW <i class="fa fa-caret-down"></i></button>
              <div class="w3-dropdown-content w3-bar-block w3-card">
-                <a href="videos.html" class="w3-bar-item w3-button">VISUALS</a>
+                <a href="videos.html" class="w3-bar-item w3-button">VIDEOS</a>
                 <a href="products.html" class="w3-bar-item w3-button">PRODUCTS</a>
               </div>
           </div>
@@ -43,9 +60,10 @@
 
    <div class="w3-container w3-content w3-center w3-padding-64" id="behind">
      <h2 class="w3-wide">BEHIND BRIXKAPS </h2>
-     <p class="w3-opacity"><i>New England Hat Brand</i></p>
-     <p class="w3-justify">BRIXKAPS was established on the New Year of 2023. Originally inspired by skateboard culture, creative visuals, and filmmaking, we worked to find a specific niche that we could improve and market. Hats. This site has been put together in an effort to allow behind the scene access to our ideas and creations.  </p>
-     <div class="w3-row-padding">
+     <p class="w3-opacity"><i>New England Hat & Production Brand</i></p>
+     <p class="w3-justify w3-center">BRIXKAPS was established on the New Year of 2023. Originally inspired by skateboard culture and filmmaking, we worked to find a specific niche that we could improve and market. Hats. This site has been put together in effort to allow behind the scene access to our ideas and creations.  </p>
+  <div class="w3-row-padding w3-padding-32">
+    <p class="w3-opacity"><i>Below presents all who's helped behind the scenes, otherwise known as 'the bricks'.</i></p>
        <div class="w3-quarter">
          <p>JACKSON POLLARO</p>
        </div>
@@ -73,8 +91,7 @@
      </div>
    </div>
 
-  
-   <div class="w3-black" id="booths">
+  <div class="w3-black w3-opacity"> 
    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
      <h2 class="w3-wide w3-center">POP-UP BOOTHS</h2>
      <p class="w3-opacity w3-center"><i>More to come soon!</i></p><br>
@@ -105,10 +122,11 @@
        </div>
      </div>
    </div>
-</div>
+  </div>
 
-<div class="w3-container w3-content w3-padding-32">
-    <table class="w3-table-all w3-hoverable">
+  <div class="w3-black w3-opacity"> 
+  <div class="w3-content w3-padding-32">
+    <table class="w3-table-all w3-text-black w3-hoverable">
         <tr class="w3-deep-orange">
             <th>Event</th>
             <th>Ticket Sold</th>
@@ -134,13 +152,16 @@
             <td>#3</td>
         </tr>
     </table>
+  </div>
+  </div>
    
 
- <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+ <footer class="w3-container w3-padding-64 w3-center w3-xlarge">
      <a href="https://www.youtube.com/@brixkaps"><i class="fa fa-youtube"></i></a>
      <a href="https://www.instagram.com/brixkaps/"><i class="fa fa-instagram"></i></a>
      <p class="w3-medium">Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
  </footer>
+
 </body>
 </html>
 
